# Scratching-the-Surface

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.agents/skills/: azure_container_apps.md  mermaid_syntax.md  uv_python.md
.claude/plans/: cascade_defect_plan.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: copilot-setup-steps.yml
docker/: base.Dockerfile  layer1.Dockerfile  layer2.Dockerfile  layer3.Dockerfile  router.Dockerfile
docs/: _quarto.yml  architecture.html  architecture.qmd  data-strategy.html  data-strategy.qmd  evaluation.html  evaluation.qmd  index.html  index.qmd  inferences.html  intro.html  intro.qmd  search.json
docs/site_libs/bootstrap/: bootstrap-dark-3acd9f2b5eccf98692d400b1b7990e0b.min.css
infra/: apps.bicep  main.bicep  main.parameters.json
infra/modules/: aca-env.bicep  acr.bicep  budget.bicep  log-analytics.bicep  openai.bicep  servicebus.bicep  storage.bicep
reports/: metrics.json
scripts/: ae_sanity.py  probe_neu_mirrors.py  render_inference_panels.py
src/cascade_defect/: __init__.py  router.py
src/cascade_defect/data/: __init__.py  ingest.py  split.py  upload.py
src/cascade_defect/eval/: __init__.py  metrics.py  run_cascade.py  run_oracle_only.py
src/cascade_defect/layer1_autoencoder/: __init__.py  app.py  model.py  train.py
src/cascade_defect/layer2_yolo/: __init__.py  app.py  train.py
src/cascade_defect/layer3_gpt4o/: __init__.py  annotate.py  app.py  oracle.py
tests/: test_data_split.py
website/: _quarto.yml  architecture.qmd  data-strategy.qmd  evaluation.qmd  index.qmd  inferences.qmd  intro.qmd
website/assets/inferences/: manifest.json
